@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2008  Vasco Nunes, Piotr Ożarowski
 
 
+2008-12-16  Piotr Ożarowski
+	* Reload movie plugin each time search is performed (in --debug mode only, this should ease writing plugins)
+
 2008-12-07  Piotr Ożarowski
 	* update_image(): update the md5 *after* all other queries (so that UPDATE will not be invoked)
 
